--- a/assets/css/Contact-Form-Clean.css
+++ b/assets/css/Contact-Form-Clean.css
@@ -1,5 +1,8 @@
 .contact-clean {
   background: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width:767px) {
